@@ -305,7 +305,7 @@ JDK 1.4 ships. Apparently, even the JSR47 experts group is divided on
 the issue.
 
 <p><b>Please direct your polite and personalized request to <a
-href="mailto:java-logging-input@eng.sun.com">java-logging-input@eng.sun.com</a>
+href="mailto:jsr-47-comments@jcp.org ">jsr-47-comments@jcp.org</a>
 with Bcc: to <a href="mailto:cgu@qos.ch">cgu@qos.ch</a>.</b>
 
 <p>By the way, e-mail to <code>java-logging-input@eng.sun.com</code>
@@ -533,11 +533,33 @@ insightful.
 <li><p><a href="pub-support/RogerThomas.html">Roger Thomas</a> <!-- -->
 <li><p><a href="pub-support/SohailAhmed.html">Sohail Ahmed</a> <!-- -->
 <li><p><a href="pub-support/AndrewBaptist.html">Andrew Baptist</a> <!-- -->
+<li><p><a href="pub-support/MichaelWeissenbacher.html">Michael Weissenbacher</a> 
+<li><p><a href="pub-support/RobertPrince.html">Robert Prince</a> <!-- -->
+<li><p><a href="pub-support/SarathChandra.html">Sarath Chandra</a> 
+<li><p><a href="pub-support/NickXidis.html">Nick Xidis</a>  
+<li><p><a href="pub-support/GeraldNazareth.html">Gerald Nazareth</a> 
+<li><p><a href="pub-support/JohnCocula.html">John W. Cocula</a> <!-- -->
+<li><p><a href="pub-support/KanedaK.html">Kaneda K</a> 
+<li><p><a href="pub-support/GordonReynolds.html">GordonReynolds</a> 
+<li><p><a href="pub-support/NikoSchwarz.html">Niko Schwarz</a> 
+<li><p><a href="pub-support/AnthonyChater.html">Anthony Chater</a> 
+<li><p><a href="pub-support/RyanKrueger.html">Ryan Krueger</a> <!-- -->
+<li><p><a href="pub-support/LucPeerdeman.html">Luc Peerdeman</a> 
+<li><p><a href="pub-support/CasperNielsen.html">Casper Nielsen</a> 
+<li><p><a href="pub-support/PrakashSridharan.html">Prakash Sridharan</a> 
+<li><p><a href="pub-support/MichaelChermside.html">Michael Chermside</a> 
+<li><p><a href="pub-support/EdoardoComar.html">Edoardo Comar</a> 
+<li><p><a href="pub-support/LeonardReinhart.html">Leonard Reinhart </a> 
 
- 
+
+
 <!--
 
 
+<li><p><a href="pub-support/.html"></a> 
+<li><p><a href="pub-support/.html"></a> 
+<li><p><a href="pub-support/.html"></a> 
+<li><p><a href="pub-support/.html"></a> 
 <li><p><a href="pub-support/.html"></a> 
 <li><p><a href="pub-support/.html"></a> 
 <li><p><a href="pub-support/.html"></a> 
