@@ -14,6 +14,9 @@
 	
  - Log4j is now configurable using JMX. [*]
 
+ - Added the FINE level as an alias for the DEBUG level to make migration
+   from log4j to j.u.l. and vice versa easier. [*]
+
  - Modified SMTPAppender to allow multiple email sessions. Thanks to
    Jon Skeet for supplying the relevant patch. [*]
 
